Allow using default certificate with ingress
Change-Id: Ie7eeff6e733c9d7da152ce4ac35a1808d7e83967
(cherry picked from commit 49b0933cf09e6c72f0d7c1da226024fb5bae96af)

--- a/roles/ingress/templates/ingress.yml.j2
+++ b/roles/ingress/templates/ingress.yml.j2
@@ -21,7 +21,9 @@ spec:
                 name: {{ ingress_service_name }}
                 port:
                   number: {{ ingress_service_port }}
+{% if not ingress_use_default_tls_certificate %}
   tls:
     - secretName: {{ ingress_secret_name | default(ingress_service_name ~ '-certs') }}
       hosts:
         - {{ ingress_host }}
+{% endif %}
