feat: add vault_token role
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/roles/external_secrets/templates/values.yml.j2
+++ b/roles/external_secrets/templates/values.yml.j2
@@ -16,7 +16,7 @@ provider:
 {% endif %}
     auth:
       kubernetes:
-        mountPath: "{{ external_secrets_cluster_secret_store_vault_auth_mount_path | default('kubernetes/local') }}"
+        mountPath: "{{ atmosphere_vault_kubernetes_auth_path }}"
         role: "{{ external_secrets_cluster_secret_store_vault_auth_role | default('external-secrets-cluster-secret-store') }}"
         serviceAccountRef:
           name: external-secrets
